# siyi-a8-mini-camera-manager

./: .gitignore  CMakeLists.txt  README.md  create_packages.sh
.github/workflows/: build.yml  rpi-build.yml
camera-manager/: CMakeLists.txt  camera_manager.cpp  siyi.cpp  siyi.hpp  siyi_camera.hpp  siyi_cli.cpp  siyi_crc.cpp  siyi_crc.hpp  siyi_protocol.cpp  siyi_protocol.hpp  siyi_test.cpp
camera-manager/mavlink_ftp_root/: siyi_a8_mini.xml
rtsp-rebroadcast/: CMakeLists.txt  rtsp_rebroadcast.cpp
